--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "form-ts",
+  "name": "react-form",
   "version": "0.1.0",
   "author": "chris hammock",
   "private": true,
@@ -28,18 +28,6 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
     ]
   },
   "devDependencies": {
