--- a/package.json
+++ b/package.json
@@ -32,5 +32,17 @@
   },
   "devDependencies": {
     "@types/ramda": "^0.29.10"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
